--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
+/* Global Styles */
+
 body {
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #f4f6f8;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  padding: 40px;
+  max-width: 700px;
+  margin: auto;
+}
+
+.m-0{
+  margin: 0;
 }
